refactor code and fixed bug